--- a/index.html
+++ b/index.html
@@ -140,17 +140,19 @@
             embeddedservice_bootstrap.settings.language = 'en_US';
 
             // Check if utilAPI and setSessionContext are available
-            
+            if (embeddedservice_bootstrap.utilAPI && embeddedservice_bootstrap.utilAPI.setSessionContext) {
                 embeddedservice_bootstrap.utilAPI.setSessionContext([
                     {
-                        name: "B2CAuthorizationToken__c",
+                        name: "B2CAuthorizationToken",
                         value: {
                             valueType: "String",
                             value: authToken,
                         },
                     }
                 ]);
-            
+            } else {
+                console.error('utilAPI or setSessionContext is not available on embeddedservice_bootstrap.');
+            }
 
             embeddedservice_bootstrap.init(
                 '00D3M0000000bcP',
