--- a/index.html
+++ b/index.html
@@ -138,13 +138,20 @@
             }
 
             embeddedservice_bootstrap.settings.language = 'en_US';
-
+console.error('AnuragTesting authToken:', authToken);
+console.error('AnuragTesting embeddedservice_bootstrap:', embeddedservice_bootstrap);
             // Check if utilAPI and setSessionContext are available
-            if (embeddedservice_bootstrap.utilAPI && embeddedservice_bootstrap.utilAPI.setSessionContext) {
-            embeddedservice_bootstrap.utilAPI.setSessionContext({
-            B2CAuthorizationToken: "sampleAuthToken12345"                });
+            if (embeddedservice_bootstrap.utilAPI.setSessionContext) {
+            embeddedservice_bootstrap.utilAPI.setSessionContext(                    
+        {
+                        name: "B2CAuthorizationToken",
+                        value: {
+                            valueType: "String",
+                            value: authToken
+                        }
+                    });
             } else {
-                console.error('utilAPI or setSessionContext is not available on embeddedservice_bootstrap.');
+                console.error('AnuragTesting utilAPI or setSessionContext is not available on embeddedservice_bootstrap.');
             }
 
             embeddedservice_bootstrap.init(
