--- a/index.html
+++ b/index.html
@@ -138,8 +138,9 @@
             }
 
             embeddedservice_bootstrap.settings.language = 'en_US';
-console.error('AnuragTesting authToken:', authToken);
-console.error('AnuragTesting embeddedservice_bootstrap:', embeddedservice_bootstrap);
+            console.error('AnuragTesting embeddedservice_bootstrap:', embeddedservice_bootstrap);
+            console.error('AnuragTesting embeddedservice_bootstrap.utilAPI:', embeddedservice_bootstrap.utilAPI);
+            console.error('AnuragTesting embeddedservice_bootstrap.utilAPI.setSessionContext:', embeddedservice_bootstrap.utilAPI.setSessionContext);
             // Check if utilAPI and setSessionContext are available
             if (embeddedservice_bootstrap.utilAPI.setSessionContext) {
             embeddedservice_bootstrap.utilAPI.setSessionContext(                    
