--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
             //console.error('AnuragTesting embeddedservice_bootstrap.utilAPI:', embeddedservice_bootstrap.utilAPI);
             //console.error('AnuragTesting embeddedservice_bootstrap.utilAPI.setSessionContext:', embeddedservice_bootstrap.utilAPI.setSessionContext);
             // Check if utilAPI and setSessionContext are available
-            if (embeddedservice_bootstrap.utilAPI && embeddedservice_bootstrap.utilAPI.setSessionContext) {
-            embeddedservice_bootstrap.utilAPI.setSessionContext(                    
+            if (window.embeddedservice_bootstrap.utilAPI && window.embeddedservice_bootstrap.utilAPI.setSessionContext) {
+            window.embeddedservice_bootstrap.utilAPI.setSessionContext(                    
         {
                         name: "B2CAuthorizationToken",
                         value: {
