--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
             }
 
             embeddedservice_bootstrap.settings.language = 'en_US';
-            console.error('AnuragTesting3 embeddedservice_bootstrap:', embeddedservice_bootstrap);
-            //console.error('AnuragTesting embeddedservice_bootstrap.utilAPI:', embeddedservice_bootstrap.utilAPI);
+            console.error('AnuragTesting4 embeddedservice_bootstrap:', embeddedservice_bootstrap);
+            console.error('AnuragTesting4 embeddedservice_bootstrap.utilAPI:', embeddedservice_bootstrap.utilAPI);
             //console.error('AnuragTesting embeddedservice_bootstrap.utilAPI.setSessionContext:', embeddedservice_bootstrap.utilAPI.setSessionContext);
             // Check if utilAPI and setSessionContext are available
             if (window.embeddedservice_bootstrap.utilAPI && window.embeddedservice_bootstrap.utilAPI.setSessionContext) {
